--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "aos": "^2.3.4",
     "framer-motion": "^12.12.1",
     "gsap": "^3.13.0",
+    "lightgallery": "^2.8.3",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
