--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://dental-server-707g.onrender.com
+# REACT_APP_API_URL=https://dental-server-707g.onrender.com
+VITE_APP_API_URL=http://localhost:5000
